--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -9,7 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="{{ ASSET_PATH }}/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  
+    <link href="{{ ASSET_PATH }}/css/custom.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/css/main.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/assets/images/FMD.ico" />
     <!--[if lt IE 9]>
       <script src="{{ ASSET_PATH }}/resources/respond/Respond.min.js"></script>
     <![endif]-->
@@ -19,45 +21,36 @@
 
   </head>
 
-  <body>
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-        </div>
-
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
-          </ul>
-        </div>
+  <body class="{{ page.style }} background-image">
+    <!-- <div class=""> -->
+      <nav class="centered">
+        <a href="/index.html">Home</a>
+        <a href="/code.html">Programming</a>
+        <a href="/music.html">Music</a>
+        <a href="/science.html">Science</a>
+        <a href="/art.html">Art</a>
+        <a href="/pages.html">Page List</a>
+      </nav>
+      <div class="container content partially-transparent">
+        {{ content }}
+        <hr>
+        <footer>
+          <p>
+            <span class="pull-left text-muted">
+              &copy; {{ site.time || date: '%Y' }} {{ site.author.name }}. All Rights Reserved.
+            </span>
+            <span class="pull-right text-muted">
+              Powered by
+              <a href="http://dbtek.github.io/jekyll-bootstrap-3" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll-Bootstrap-3</a>
+              and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap 3.0.3</a>.
+            </span>
+          </p>
+        </footer>
       </div>
-    </nav>
-    <div class="container">
-      {{ content }}
-      <hr>
-      <footer>
-        <p>
-          &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          <span class="pull-right text-muted">
-            powered by
-            <a href="http://dbtek.github.io/jekyll-bootstrap-3" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll-Bootstrap-3</a>
-            and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap 3.0.3</a>
-          </span>
-        </p>
-      </footer>
-    </div>
 
-    {% include JB/analytics %}
-    <script src="{{ ASSET_PATH }}/resources/jquery/jquery.min.js"></script>
-    <script src="{{ ASSET_PATH }}/resources/bootstrap/js/bootstrap.min.js"></script>
+      {% include JB/analytics %}
+      <script src="{{ ASSET_PATH }}/resources/jquery/jquery.min.js"></script>
+      <script src="{{ ASSET_PATH }}/resources/bootstrap/js/bootstrap.min.js"></script>
+    <!-- </div> -->
   </body>
 </html>
