first blog added. Changed layout of Home page. Changed some styles.

--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -21,14 +21,15 @@
 
   </head>
 
-  <body class="{{ page.style }} background-image">
+  <body class="{{ page.image }} background-image">
     <!-- <div class=""> -->
       <nav class="centered">
         <a href="/index.html">Home</a>
-        <a href="/code.html">Programming</a>
+        <a href="/blog.html">Blogs</a>
+       <!--  <a href="/code.html">Programming</a>
         <a href="/music.html">Music</a>
         <a href="/science.html">Science</a>
-        <a href="/art.html">Art</a>
+        <a href="/art.html">Art</a> -->
         <a href="/pages.html">Page List</a>
       </nav>
       <div class="container content partially-transparent">
