Edit Living Clojure blog with Ch7 bug fix; Add draft Programming with SonicPi blog, together with associated images.

--- a/assets/themes/bootstrap/css/custom.css
+++ b/assets/themes/bootstrap/css/custom.css
@@ -29,6 +29,14 @@ body {
   height: 100vh;
 }
 
+ .SonicPi-image {
+  background-image: url("/assets/images/SonicPiImage.png");
+  background-repeat: no-repeat; /*repeat;*/
+  background-size: cover; /*contain;*/
+  background-attachment: fixed;
+  height: 100vh;
+}
+
 
 .basic-table {
   width: 90%;
