--- a/_includes/themes/bootstrap/page.html
+++ b/_includes/themes/bootstrap/page.html
@@ -7,9 +7,9 @@
   {% if page.include_social %}
   <div class="about-social">
     <a href="http://twitter.com/graham_jp" class="about-social-button-twitter" target="twitter">@graham_jp</a>
-   <!--  <a href="http://www.linkedin.com/in/deanwampler/" class="about-social-button-linkedin" target="linkedin">Dean Wampler</a>
-    <a href="resume.pdf" class="about-social-button-resume" target="resume">Resum&eacute;</a> -->
-  </div>
+    <a href="http://linkedin.com/in/grahamjp" class="about-social-button-linkedin" target="linkedin">Dr. J.P. Graham</a>
+<!--     <a href="resume.pdf" class="about-social-button-resume" target="resume">Resum&eacute;</a>
+  </div> -->
   {% endif %}
 </section>
 
