add draft ClojureFunctions post. Add Science of Drugs and Rock n Roll talk as pdf. Add name to post theme

--- a/_includes/themes/bootstrap/post.html
+++ b/_includes/themes/bootstrap/post.html
@@ -5,7 +5,7 @@
 <div class="row post-full">
   <div class="col-md-12">
     <div class="date">
-      <span>{{ page.date | date_to_long_string }}</span>
+      <span>{{ page.date | date_to_long_string }}<br> <a href="http://jonathangraham.github.io/index.html"> Jonathan Graham</a></span>
     </div>
     <div class="content">
       {{ content }}
