--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -26,11 +26,12 @@
       <nav class="centered">
         <a href="/index.html">Home</a>
         <a href="/blog.html">Blogs</a>
+        <a href="/talks.html">Talks</a>
        <!--  <a href="/code.html">Programming</a>
         <a href="/music.html">Music</a>
         <a href="/science.html">Science</a>
         <a href="/art.html">Art</a> -->
-        <a href="/pages.html">Page List</a>
+        <!-- <a href="/pages.html">Page List</a> -->
       </nav>
       <div class="container content partially-transparent">
         {{ content }}
