--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -21,7 +21,7 @@
 
   </head>
 
-  <body class="{{ page.image }} background-image">
+  <body>
     <!-- <div class=""> -->
       <nav class="centered">
         <a href="/index.html">Home</a>
