--- a/_includes/themes/bootstrap/page.html
+++ b/_includes/themes/bootstrap/page.html
@@ -1,3 +1,4 @@
+<body class="{{ page.image }} background-image">
 <section id="about" class="centered">
   <h1>{{ page.title }}</h1>
   <p class="about-whoami">
@@ -18,3 +19,4 @@
       {{ content }}
   </div>
 </div>
+</body>
