--- a/_includes/themes/bootstrap/page.html
+++ b/_includes/themes/bootstrap/page.html
@@ -1,6 +1,6 @@
 <body class="{{ page.image }} background-image">
 <section id="about" class="centered">
-  <h1>{{ page.title }}</h1>
+  <h2  style="font-size:7rem; line-height:120%;">{{ page.title }}</h1>
   <p class="about-whoami">
     {{ page.tagline }}
   </p>
