simplify social media buttons. Change name on index

--- a/_includes/themes/bootstrap/page.html
+++ b/_includes/themes/bootstrap/page.html
@@ -5,13 +5,14 @@
     {{ page.tagline }}
   </p>
 
-  {% if page.include_social %}
+
   <div class="about-social">
-    <a href="http://twitter.com/graham_jp" class="about-social-button-twitter" target="twitter">@graham_jp</a>
-    <a href="http://linkedin.com/in/grahamjp" class="about-social-button-linkedin" target="linkedin">Dr. J.P. Graham</a>
+    <a href="http://twitter.com/graham_jp" class="about-social-button-twitter" target="twitter"></a>
+    <a href="http://linkedin.com/in/grahamjp" class="about-social-button-linkedin" target="linkedin"></a>
+  </div>
 <!--     <a href="resume.pdf" class="about-social-button-resume" target="resume">Resum&eacute;</a>
   </div> -->
-  {% endif %}
+
 </section>
 
 <div class="row">
