nav and header responsiveness

--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- <div class=""> -->
-      <nav class="centered">
+      <nav class="centered" style="font-size: 3vw;">
         <a href="/index.html">Home</a>
         <a href="/blog.html">Blogs</a>
         <a href="/talks.html">Talks</a>
