--- a/_includes/themes/bootstrap/page.html
+++ b/_includes/themes/bootstrap/page.html
@@ -1,7 +1,7 @@
 <body class="{{ page.image }} background-image">
 <section id="about" class="centered">
-  <h2  style="font-size:7rem; line-height:120%;">{{ page.title }}</h1>
-  <p class="about-whoami">
+  <h2  style="font-size:5rem; line-height:120%;">{{ page.title }}</h1>
+  <p class="about-whoami" style="font-size:2rem; line-height:120%;">
     {{ page.tagline }}
   </p>
 
